@@ -1,3 +1,7 @@
+06-05-29 Rene Fritz  <r.fritz@colorcube.de>
+
+	* Fix: use of $GLOBALS['TYPO3_DB']->xxx
+
 06-04-11 Rene Fritz  <r.fritz@colorcube.de>
 
 	* Fix: In the navframe, the path to the 'reload'-icon was wrong
